<resources>
    <string name="app_name">GSChatApp</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="plus_sign_out">plugin_sign_out</string>
    <string name="prompt_email">email</string>
    <string name="prompt_password">password</string>
    <string name="action_sign_in_short">action_sign_in_short</string>
    <string name="action_sign_in">login</string>
    <string name="action_sign_in_complete">Logoff</string>
    <string name="action_sign_in_progress">Loading..</string>
    <string name="user_name_null_warning">user name can not be empty</string>
    <string name="login_error_message">login error %s</string>
    <string name="title_activity_chat_room">ChatRoomActivity</string>
    <string name="start_error">start gschat error :%s</string>
    <string name="action_sign_in_error">Failed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logoff_error">logoff error :%s</string>
    <string name="user_state_error_notify">user state error : %s</string>
    <string name="query_chat_list_error">query chat session list error :%s</string>

    <string name="icon_user">&#xf007;</string>
    <string name="icon_add_user">&#xf234;</string>
    <string name="icon_add">&#xf067;</string>
    <string name="icon_readmore">&#xf178;</string>
    <string name="icon_answer">&#xf095;</string>
    <string name="icon_mute">&#xf131;</string>

    <string name="icon_like">&#xf087;</string>
    <string name="icon_share">&#xf064;</string>
    <string name="icon_follow">&#xf005;</string>

    <string name="icon_send">&#xf1d8;</string>

    <string name="icon_recv">&#xf112;</string>

    <string name="icon_android">&#xf17b;</string>
    <string name="icon_dropbox">&#xf16b;</string>
    <string name="icon_soundcloud">&#xf1be;</string>
    <string name="icon_spotify">&#xf1bc;</string>

    <string name="icon_vine">&#xf1ca;</string>
    <string name="icon_twitter">&#xf099;</string>
    <string name="icon_tumbler">&#xf173;</string>
    <string name="icon_stackoverflow">&#xf16c;</string>
    <string name="icon_gplus">&#xf0d5;</string>
    <string name="icon_facebook">&#xf09a;</string>

    <string name="icon_entypo_facebook">&#59140;</string>

    <string name="icon_behance">&#xf1b4;</string>
    <string name="icon_dribble">&#xf17d;</string>

    <string name="icon_plus_circle">&#xf055;</string>
    <string name="icon_go_back">&#xf0a8;</string>
    <string name="icon_go_forward">&#xf0a9;</string>
    <string name="icon_logoff">&#xf08b;</string>
    <string name="icon_download">&#xf0ed;</string>
    <string name="icon_upload">&#xf0ee;</string>
    <string name="icon_config">&#xf085;</string>
    <string name="icon_creditcard">&#xf09d;</string>
    <string name="chatroom_add">new chat</string>
    <string name="user_logoff">sign off</string>
    <string name="send_message">send</string>
    <string name="error_send_message">send message error :%s</string>
</resources>
