<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://robobinding.org/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gschat.app.view.LoginFragment">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:src="@drawable/welcome"/>

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                bind:text="${userName}"
                bind:enabled="{textEditEnable}"/>

            <com.dd.processbutton.iml.ActionProcessButton
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                custom:pb_colorNormal="@android:color/holo_blue_light"
                custom:pb_colorPressed="@android:color/holo_blue_dark"
                custom:pb_textComplete="@string/action_sign_in_complete"
                custom:pb_textProgress="@string/action_sign_in_progress"
                custom:pb_textError="@string/action_sign_in_error"
                bind:enabled="{buttonEnable}"
                bind:process="{loginProcess}"
                bind:mode="{processMode}"
                bind:onClick="onClick"/>
        </LinearLayout>
    </ScrollView>

</FrameLayout>

